--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 h1 {
   color: lightgrey;
 }
+
+ul.main-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+ul.main-menu>li {
+    display: inline;
+}
