--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ h1 {
 a:hover {
    color:black;
 }
-<a href="https://rwill134.github.io/">link</a>
-
+/*<a href="https://rwill134.github.io/">link</a>*/
 
 ul.main-menu {
     list-style-type: none;
