--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
 }
 /* change hover link color */
 a:hover {
-   color:black;
+   color:red;
 }
 /*<a href="https://rwill134.github.io/">link</a>*/
 
