--- a/style.css
+++ b/style.css
@@ -7,17 +7,31 @@ body {
   background: wheat;
 }
 
-a:link, a:visited {
+/*a:link, a:visited {
     background-color: #f44336;
-    color: wheat;
+    color: palevioletred;
     padding: 14px 25px;
     text-align: center; 
     text-decoration: none;
     display: inline-block;
+}*/
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
 }
 
+.button1 {border-radius: 12px;}
+
 a:hover, a:active {
-    background-color: palevioletred;
+    background-color: red;
 }
 
 ul.main-menu {
