--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 a:link, a:visited {
     background-color: #f44336;
-    color: palevioletred;
+    color: white;
     padding: 14px 25px;
     text-align: center; 
     text-decoration: none;
