--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
 }
 
 a:link, a:visited {
-    background-color: #f44336;
+    background-color: black;
     color: white;
     padding: 14px 25px;
     text-align: center; 
@@ -26,7 +26,7 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-    background-color: red;
+    background-color: dimgray;
 }
 
 ul.main-menu {
