--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ p {
     margin-bottom: 0px;
     margin-right: 150px;
     margin-left: 150px;
+    text-align: justify;
 }
 
 a:link, a:visited {
