--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   background-repeat: no-repeat;
 }
 
+.boxed {
+  border: 1px solid aliceblue ;
+}
+
 p {
     margin-top: 0px;
     margin-bottom: 0px;
