--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ p {
     margin-right: 150px;
     margin-left: 150px;
     text-align: justify;
+    line-height: 1.5px;
     color: white;
     font-family: "Courier New", Courier, monospace;
 }
@@ -34,6 +35,7 @@ a:link, a:visited {
     padding: 14px 25px;
     text-align: center; 
     text-decoration: none;
+    font-family: Copperplate, "Copperplate", fantasy;
     display: inline-block;
     box-shadow: 2px 2px grey;
 }
