--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ h1 {
 h2 {
    color: aliceblue;
    font-family: Copperplate, "Copperplate", fantasy;
+    margin-right: 150px;
+    margin-left: 150px;
 }
 
 body {
@@ -15,7 +17,7 @@ body {
 }
 
 .boxed {
-  border: 2px groove aliceblue ;
+  border: 3px groove aliceblue ;
 }
 
 p {
