--- a/style.css
+++ b/style.css
@@ -57,9 +57,9 @@ ul.main-menu>li {
 
 ul.writing-samples {
     list-style-type: none;
-    margin: 2px;
-    padding: 0;
+    margin: 0;
+    padding: 2px;
 }
 ul.writing-samples>li {
-    display: inline;
+    display: block;
 }
