--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ h1 {
 h2 {
    color: aliceblue;
    font-family: Copperplate, "Copperplate", fantasy;
+    margin-top: 150px;
+    margin-bottom: 150px;
     margin-right: 150px;
     margin-left: 150px;
 }
