--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2 {
 }
 
 body {
-  background-image: url("/eiffel.jpg");
+  background-image: url("/coffee-writer.jpeg");
   background-repeat: no-repeat;
 }
 
