--- a/style.css
+++ b/style.css
@@ -19,13 +19,17 @@ body {
 }
 
 .boxed {
-  border: 3px groove aliceblue ;
+  border: 3px groove aliceblue;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 310px;
+  margin-left: 160px;
 }
 
 p {
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-right: 150px;
+    margin-right: 300px;
     margin-left: 150px;
     text-align: justify;
     line-height: 20px;
