--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ a:link, a:visited {
     box-shadow: 2px 2px grey;
 }
 
+SnCo.resize {
+    height: auto; 
+    width: auto; 
+    max-width: 300px; 
+    max-height: 300px;
+}
+
 a:hover, a:active {
     background-color: azure;
 }
