--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ a:link, a:visited {
 }
 
 SnCo.resize {
-    height: auto; 
-    width: auto; 
-    max-width: 300px; 
-    max-height: 300px;
+    height: 50px; 
+    width: 50px; 
+    max-width: 50px; 
+    max-height: 50px;
 }
 
 a:hover, a:active {
