--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body {
   margin-left: 100px;
 }
 
+#snco {
+  height: 450px;
+  width: 350px;
+}
+
 p {
     margin-top: 0px;
     margin-bottom: 0px;
