--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   background-image: url("/coffee-writing.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .boxed {
