--- a/style.css
+++ b/style.css
@@ -43,6 +43,17 @@ p {
     font-family: "Courier New", Courier, monospace;
 }
 
+table {
+  margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    text-align: justify;
+    line-height: 20px;
+    color: white;
+    font-family: "Courier New", Courier, monospace;
+}
+
 a:link, a:visited {
     background-color: aliceblue;
     color: black;
