--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   margin-bottom: 100px;
   margin-right: 250px;
   margin-left: 150px;
-  background-color: burelywood;
+  background-color: BurlyWood;
 }
 
 #snco {
