--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ ul.research-list {
     line-height: 20px;
     color: white;
     font-family: "Courier New", Courier, monospace;
+    list-style-type: circle;
 }
 
 table {
