--- a/style.css
+++ b/style.css
@@ -33,6 +33,16 @@ body {
   width: 350px;
 }
 
+#exp {
+  height: 450px;
+  width: 200px;
+}
+
+#hsm {
+  height: 450px;
+  width: 350px;
+}
+
 p {
     margin-top: 0px;
     margin-bottom: 0px;
