--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ body {
   width: 350px;
 }
 
-#exp {
+#boxed exp {
   height: 450px;
   width: 200px;
 }
 
-#hsm {
+#boxed hsm {
   height: 450px;
   width: 350px;
 }
