--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ ul.research-list {
     margin-left: 10px;
     text-align: justify;
     line-height: 20px;
-    color: white;
+    color: SaddleBrown;
     font-family: "Courier New", Courier, monospace;
     list-style-type: circle;
 }
