--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ table {
     margin-left: 10px;
     text-align: justify;
     line-height: 20px;
-    color: white;
+    color: SaddleBrown;
     font-family: "Courier New", Courier, monospace;
     column-gap: 10px;
     row-gap: 10px;
